--- a/test.html
+++ b/test.html
@@ -55,13 +55,13 @@
             <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#262f3b">
                 <div class="container-fluid">
 
-                    <button type="button" id="sidebarCollapse" class="btn btn-secondary" style="background-color:#3b434e">
+                    <!--<button type="button" id="sidebarCollapse" class="btn btn-secondary" style="background-color:#3b434e">
                         <i class="fas fa-align-left"></i>
                         <span></span>
                     </button>
                     <button class="btn btn-dark d-inline-block d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <i class="fas fa-align-justify"></i>
-                    </button>
+                    </button>-->
 
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="nav navbar-nav ml-auto">
