--- a/Ships/template.html
+++ b/Ships/template.html
@@ -24,7 +24,7 @@
 
 		var xobj = new XMLHttpRequest();
 			xobj.overrideMimeType("application/json");
-		xobj.open('GET', 'essex/test.json', true); // Replace 'my_data' with the path to your file
+		xobj.open('GET', 'essex/essex.json', true); // Replace 'my_data' with the path to your file
 		xobj.onreadystatechange = function () {
 			  if (xobj.readyState == 4 && xobj.status == "200") {
 				// Required use of an anonymous callback as .open will NOT return a value but simply returns undefined in asynchronous mode
@@ -39,6 +39,7 @@
 		  // Parse JSON string into object
 			var actual_JSON = JSON.parse(response);
 			console.log(actual_JSON);
+			document.getElementById("shipHeader").innerHTML = actual_JSON.name;
 		 });
 	}
 	
