--- a/Ships/template.html
+++ b/Ships/template.html
@@ -39,7 +39,7 @@
 		  // Parse JSON string into object
 			var actual_JSON = JSON.parse(response);
 			console.log(actual_JSON);
-			document.getElementById("shipHeader").innerHTML = actual_JSON.prefix + " " + actual_JSON.name "\(JP: " + actual_JSON.nameJP + ", CN: " + actual_JSON.nameCN + "\)";
+			document.getElementById("shipHeader").innerHTML = actual_JSON.prefix + " " + actual_JSON.name + "\(JP: " + actual_JSON.nameJP + ", CN: " + actual_JSON.nameCN + "\)";
 			document.getElementById("shipID").innerHTML = actual_JSON.ID;
 			document.getElementById("shipStarRating").innerHTML = actual_JSON.initialStar;			
 			document.getElementById("shipStarRating").innerHTML = actual_JSON.initialStar;			
