--- a/Ships/template.html
+++ b/Ships/template.html
@@ -46,7 +46,7 @@
 			document.getElementById("shipHull").innerHTML = actual_JSON.hull;						
 			document.getElementById("shipNavy").innerHTML = actual_JSON.navy;					
 			document.getElementById("shipBuildTime").innerHTML = actual_JSON.buildTime;					
-			document.getElementById("shipAcquisition").innerHTML = actual_JSON.aquisitionMethod;	
+			document.getElementById("shipAcquisition").innerHTML = actual_JSON.acquisitionMethod;	
 			
 			var enhancementJSON = JSON.parse(actual_JSON.enhance);		
 			document.getElementById("shipEnhancementIncome").innerHTML = "Firepower: " + enhancementJSON.firepower + "<br>Torpedo: " + enhancementJSON.torpedo + "<br>Aviation: " + enhancementJSON.aviation + "<br>Reload: " + enhancementJSON.reload;
@@ -189,7 +189,7 @@
 					</b>
 				</td>
 				<td style="padding-left: 0px;padding-right: 0px;">
-					<a href="/blhx/%E5%88%86%E7%B1%BB:%E8%88%AA%E6%AF%8D" title="Aircraft carrier" target="_blank">
+					<a href="/blhx/%E5%88%86%E7%B1%BB:%E8%88%AA%E6%AF%8D" target="_blank">
 						<img alt="Aircraft carrier" src="http://p2.qhimg.com/dr/30__/t012321038050a2efca.png1" width="30" height="19" data-file-name="ShipType-航母.png" data-file-width="50" data-file-height="31">
 						</a>
 						<font style="vertical-align: inherit;">
@@ -220,7 +220,7 @@
 						</b>
 					</td>
 					<td style="padding-left: 0px;padding-right: 0px;background:#">
-						<a href="/blhx/%E5%88%86%E7%B1%BB:%E9%98%B5%E8%90%A5:%E7%99%BD%E9%B9%B0" title="White eagle" target="_blank">
+						<a href="/blhx/%E5%88%86%E7%B1%BB:%E9%98%B5%E8%90%A5:%E7%99%BD%E9%B9%B0" target="_blank">
 							<img alt="White eagle" src="http://p7.qhimg.com/dr/30__/t01bf67b03a5536250b.png1" width="30" height="30" data-file-name="Camplogo_白鹰.png" data-file-width="500" data-file-height="500">
 							</a>
 							<font style="vertical-align: inherit;">
@@ -245,12 +245,12 @@
 						<td>
 							<b>
 								<font style="vertical-align: inherit;">
-									<font style="vertical-align: inherit;">Aquisition</font>
+									<font style="vertical-align: inherit;">Acquisition</font>
 								</font>
 							</b>
 						</td>
 						<td colspan="4">
-								<font style="vertical-align: inherit;" id="shipAquisition">
+								<font style="vertical-align: inherit;" id="shipAcquisition">
 										<font style="vertical-align: inherit;">Limited time construction</font>
 								</font>
 						</td>
