--- a/ship.html
+++ b/ship.html
@@ -53,6 +53,15 @@
 			document.getElementById("shipScrapIncome").innerHTML = "Gold: " + actual_JSON.scrap.gold + "<br>Oil: " + actual_JSON.scrap.oil + "<br>Medal: " + actual_JSON.scrap.medal;
 			
 			document.getElementById("shipIcon").src = actual_JSON.imageSRC;
+			
+			if (actual_JSON.hull == "Aircraft Carrier" || actual_JSON.hull == "Light Aircraft Carrier") {
+				document.getElementById("shipHullIcon").src = "Images\Hull\CVicon.png";
+			}
+			
+			if (actual_JSON.navy == "Eagle Union") {
+				document.getElementById("shipNavyIcon").src = "Images\Navy\USSicon.png";
+			}
+			
 		 });
 	}
 	
