--- a/ship.html
+++ b/ship.html
@@ -55,11 +55,11 @@
 			document.getElementById("shipIcon").src = actual_JSON.imageSRC;
 			
 			if (actual_JSON.hull == "Aircraft Carrier" || actual_JSON.hull == "Light Aircraft Carrier") {
-				document.getElementById("shipHullIcon").src = "Images\Hull\CVicon.png";
+				document.getElementById("shipHullIcon").src = "Images/Hull/CVicon.png";
 			}
 			
 			if (actual_JSON.navy == "Eagle Union") {
-				document.getElementById("shipNavyIcon").src = "Images\Navy\USSicon.png";
+				document.getElementById("shipNavyIcon").src = "Images/Navy/USSicon.png";
 			}
 			
 		 });
