--- a/ship.html
+++ b/ship.html
@@ -76,6 +76,7 @@
 			
 			if (actual_JSON.rarity == "Super Rare") {
 				document.getElementById("shipRarityColor").style = "background:#AEAB66";
+				document.getElementById("shipRarityColor2").style = "background:#AEAB66";
 			}
 			
 		 });
@@ -163,7 +164,7 @@
 
 <!-- General Info -->
 
-<table class="wikitable" style="width:100%;text-align:center;word-break:break-word">
+<table class="wikitable" style="width:100%;height:400px;text-align:center;word-break:break-word">
 	<tbody>
 		<tr>
 			<td colspan="5" style="background:#000000" id="shipRarityColor">
@@ -283,7 +284,7 @@
 						<td style="padding-left: 0px;padding-right: 0px">
 							<b>
 								<font style="vertical-align: inherit;">
-									<font style="vertical-align: inherit;">Enhancement Income</font>
+									<font style="vertical-align: inherit;">Enhance Income</font>
 								</font>
 							</b>
 						</td>
@@ -316,10 +317,10 @@
 
 <!-- Misc Info -->
 
-<table class="wikitable sv-portrait" style="width:100%;text-align:center">
+<table class="wikitable sv-portrait" style="width:100%;height:400px;text-align:center">
 	<tbody>
 			<tr>
-				<td colspan="2"  style="background:#000000" id="shipRarityColor">
+				<td colspan="2"  style="background:#000000" id="shipRarityColor2">
 					<b>
 						<font style="vertical-align: inherit;">
 							<font style="vertical-align: inherit;">Information</font>
