ship.html 1.3 ship.css 0.2

--- a/ship.html
+++ b/ship.html
@@ -164,7 +164,7 @@
 
 <!-- General Info -->
 
-<table class="wikitable" style="width:100%;height:400px;text-align:center;word-break:break-word">
+<table class="wikitable" style="width:100%;text-align:center;word-break:break-word">
 	<tbody>
 		<tr>
 			<td colspan="5" style="background:#000000" id="shipRarityColor">
@@ -317,7 +317,7 @@
 
 <!-- Misc Info -->
 
-<table class="wikitable sv-portrait" style="width:100%;height:400px;text-align:center">
+<table class="wikitable" style="width:100%;text-align:center">
 	<tbody>
 			<tr>
 				<td colspan="2"  style="background:#000000" id="shipRarityColor2">
