--- a/ship.html
+++ b/ship.html
@@ -116,6 +116,7 @@
 	
 	function onSkinNavButtonClick(id){
 		var obj = document.getElementById('shipSkinNav').children;
+		console.log(obj);
 		
 		for (i = 0; i < obj.length; ++i){
 			if (obj[i].id == id) {
