--- a/ship.html
+++ b/ship.html
@@ -116,17 +116,15 @@
 	
 	function onSkinNavButtonClick(id){
 		var obj = document.getElementById('shipSkinNav').children;
-		console.log(obj);
 		
 		for (i = 0; i < obj.length; ++i){
 			var child = obj[i].children;
 			for (j = 0; j < child.length; ++j){
 				var identifier = child[j].id.substring(0,4);
-				console.log(identifier);
 				if (child[j].id == id) {
-					document.getElementById(id).className = 'btnContainer activeButton';
+					document.getElementById(id).className = 'btnOverlay activeButton';
 				} else if (child[j].id != id && identifier == "ovr_"){
-					document.getElementById(child[j].id).className = 'btnContainer';
+					document.getElementById(child[j].id).className = 'btnOverlay';
 				}
 			}			
 		}
