--- a/ship.html
+++ b/ship.html
@@ -107,6 +107,7 @@
 				'<img class="btnImage" id="' + data.skin[x].id + '" src="' + data.skin[x].icon + '"></img>\
 				<div class="btnOverlay activeButton" id="ovr_' + data.skin[x].id+ '"></div>';
 				firstIteration = false;
+				onSkinNavButtonClick(JSON.stringify(data.skin[x]));
 			} else {
 				container.innerHTML = 
 				'<img class="btnImage" id="' + data.skin[x].id + '" src="' + data.skin[x].icon + '"></img>\
@@ -118,7 +119,7 @@
 	}
 	
 	function onSkinNavButtonClick(raw_skin){
-		var skin = JSON.parse(raw_skin);
+		var skin = JSON.parse(raw_skin);		
 		var id = "ovr_"+skin.id;
 		var obj = document.getElementById('shipSkinNav').children;
 		
@@ -128,6 +129,7 @@
 				var identifier = child[j].id.substring(0,4);
 				if (child[j].id == id) {
 					document.getElementById(id).className = 'btnOverlay activeButton';
+					loadShipSkinElements(skin);
 				} else if (child[j].id != id && identifier == "ovr_"){
 					document.getElementById(child[j].id).className = 'btnOverlay';
 				}
