--- a/ship.html
+++ b/ship.html
@@ -98,6 +98,7 @@
 	
 	function setShipSkinNav(data){
 		var firstIteration = true;
+		var initial = "";
 		for (x in data.skin) {
 			var container = document.createElement('div');
 			container.className = 'btnContainer';			
@@ -107,7 +108,7 @@
 				'<img class="btnImage" id="' + data.skin[x].id + '" src="' + data.skin[x].icon + '"></img>\
 				<div class="btnOverlay activeButton" id="ovr_' + data.skin[x].id+ '"></div>';
 				firstIteration = false;
-				onSkinNavButtonClick(JSON.stringify(data.skin[x]));
+				initial = JSON.stringify(data.skin[x]);
 			} else {
 				container.innerHTML = 
 				'<img class="btnImage" id="' + data.skin[x].id + '" src="' + data.skin[x].icon + '"></img>\
@@ -116,6 +117,7 @@
 			
 			document.getElementById('shipSkinNav').appendChild(container);
 		}
+		onSkinNavButtonClick(initial);
 	}
 	
 	function onSkinNavButtonClick(raw_skin){
