--- a/ship.html
+++ b/ship.html
@@ -535,7 +535,7 @@
 				</tr>
 			</table>
 		</td>
-		<td id="shipSkinDesc" style="width:50%;text-align:left;padding:10px;">
+		<td id="shipSkinDesc" style="width:50%;text-align:left;padding:10px">
 		</td>
 	</tr>
 	<tr>
