--- a/ship.html
+++ b/ship.html
@@ -535,21 +535,21 @@
 				</tr>
 			</table>
 		</td>
-		<td style="width:50%;text-align:left;padding:10px">
+		<td style="width:50%">
 			<table class="wikitablewide" style="width:100%;height:100%;text-align:center;margin:0 0 0 0;">
 				<tr>
 					<td style="background:#262f3b">Description</td>
 				</tr>
 				<tr>
-					<td style="padding:10px;">
-						<font style="text-align:left;vertical-align:top" id="shipSkinDesc"></font>
+					<td style="text-align:left;padding:10px;">
+						<font style="vertical-align:top" id="shipSkinDesc"></font>
 					</td>
 				</tr>
 			</table>
 		</td>
 	</tr>
 	<tr>
-		<td style="width:50%;">
+		<td style="width:50%">
 			<table class="wikitablewide" style="width:100%;height:100%;text-align:center;margin:0 0 0 0;">
 				<tr>
 					<td style="background:#262f3b">SD</td>
