--- a/ship.html
+++ b/ship.html
@@ -550,7 +550,7 @@
 	</tr>
 	<tr>
 		<td style="width:50%">
-			<table class="wikitablewide" style="width:100%;height:100%;text-align:center;margin:0 0 0 0;">
+			<table class="wikitablewide" style="width:100%;max-height:100%;text-align:center;margin:0 0 0 0;">
 				<tr>
 					<td style="background:#262f3b">SD</td>
 				</tr>
