--- a/ship.html
+++ b/ship.html
@@ -535,8 +535,8 @@
 				</tr>
 			</table>
 		</td>
-		<td style="width:50%;padding:0 0 0 0;">
-			<table class="wikitablewide" style="width:100%;height:100%;text-align:center;margin:0 0 0 0">
+		<td style="width:50%;">
+			<table class="wikitablewide" style="width:100%;height:100%;text-align:center;margin:0 0 0 0;position:absolute;left:0;top:0;">
 				<tr>
 					<td style="background:#262f3b">Description</td>
 				</tr>
