--- a/ship.html
+++ b/ship.html
@@ -535,7 +535,7 @@
 				</tr>
 			</table>
 		</td>
-		<td style="width:50%;">
+		<td style="width:50%;position: relative;">
 			<table class="wikitablewide" style="width:100%;height:100%;text-align:center;margin:0 0 0 0;position:absolute;left:0;top:0;">
 				<tr>
 					<td style="background:#262f3b">Description</td>
