--- a/ship.html
+++ b/ship.html
@@ -535,8 +535,8 @@
 				</tr>
 			</table>
 		</td>
-		<td style="width:50%;position: relative;">
-			<table class="wikitablewide" style="width:100%;height:100%;text-align:center;margin:0 0 0 0;position:absolute;left:0;top:0;">
+		<td style="width:50%;">
+			<table class="wikitablewide" style="width:100%;height:100%;text-align:center;margin:0 0 0 0">
 				<tr>
 					<td style="background:#262f3b">Description</td>
 				</tr>
@@ -549,8 +549,8 @@
 		</td>
 	</tr>
 	<tr>
-		<td style="width:50%;position:relative;">
-			<table class="wikitablewide" style="width:100%;height:100%;text-align:center;margin:0 0 0 0;position:absolute;left:0;top:0;">
+		<td style="width:50%">
+			<table class="wikitablewide" style="width:100%;height:100%;text-align:center;margin:0 0 0 0;">
 				<tr>
 					<td style="background:#262f3b">SD</td>
 				</tr>
