--- a/ship.html
+++ b/ship.html
@@ -535,7 +535,7 @@
 				</tr>
 			</table>
 		</td>
-		<td style="width:50%;">
+		<td style="width:50%;height:1px;">
 			<table class="wikitablewide" style="width:100%;height:100%;text-align:center;margin:0 0 0 0">
 				<tr>
 					<td style="background:#262f3b">Description</td>
@@ -549,7 +549,7 @@
 		</td>
 	</tr>
 	<tr>
-		<td style="width:50%">
+		<td style="width:50%;height:1px;">
 			<table class="wikitablewide" style="width:100%;height:100%;text-align:center;margin:0 0 0 0;">
 				<tr>
 					<td style="background:#262f3b">SD</td>
